# inPsights

./: .gitignore  .gitlab-ci.yml  .gitmodules  .zenodo.json  CMakeLists.txt  Classes_of_LocalSpin_Mulitplicity.mdj  Classes_of_LocalSpin_Mulitplicity.mdj.orig  DownloadEigen.in  README.md  RZ_BUILD.sh  TEST  UBU_BUILD.sh
src/: CMakeLists.txt  Core.cpp  Core.h  Electron.cpp  Electron.h  ElectronAssigner.cpp  ElectronPermutation.cpp  ElectronRefArrangement.cpp  FileXyzInput.cpp  Hungarian.cpp  HungarianElectronAssigner.cpp  InputOutput.cpp  Molecule.cpp  Particle.cpp  SpinDeterminer.cpp  SpinProjectionQuantumNumberCounter.cpp  SpinQuantumNumberCounter.cpp  SpinQuantumNumberCounter.h  TestElectronAssigner.cpp  main.cpp  oldtests.cpp  pse.cpp
src/AmolqcInterface/: CMakeLists.txt  main.cpp  t.wf  wrapper.sh
src/AmolqcInterface/AmolqcElocInterface/: CMakeLists.txt
src/AmolqcInterface/AmolqcFileImport/: CMakeLists.txt
src/AmolqcInterface/amolqc/: .gitignore  Makefile  amolqc.sublime-project  configure  cpp_t.cpp  vars.mk
src/AmolqcInterface/include/: AmolqcImporter.h  ElectronicWaveFunction.h  ElectronicWaveFunctionProblem.h  OptimizationPathFileImporter.h  ProblemObserver.h  RefFileImporter.h  WfFileImporter.h
src/AmolqcInterface/source/: AmolqcImporter.cpp  ElectronicWaveFunction.cpp  ElectronicWaveFunctionProblem.cpp  OptimizationPathFileImporter.cpp  RefFileImporter.cpp  WfFileImporter.cpp
src/AmolqcInterface/tests/: AElectronicWaveFunctionProblemTest.cpp  CMakeLists.txt
src/Analysis/: CMakeLists.txt
src/Analysis/include/: IWaveFunction.h
src/Analysis/source/: IWaveFunction.cpp
src/Analysis/tests/: CMakeLists.txt
src/BSplines/: CMakeLists.txt
src/BSplines/include/: BSplineFromControlPolygon.h  BSplineFromPenalizedLeastSquaresFitWithFixedEnds.h  BSplineFromPenalizedLeastSquaresFitWithLooseEnds.h  BSplineGenerator.h  BSplineRootFinder.h  BSplineSplitter.h  BSplineTools.h  IRCTools.h  LowePathSimplifier.h  NumericalIntegration.h
src/BSplines/source/: BSpline.cpp  BSplineBasis.cpp  BSplineFromPenalizedLeastSquaresFitWithFixedEnds.cpp  BSplineFromPointInterpolation.cpp  BSplineGenerator.cpp  ContainerConverter.cpp  RamerDouglasPeuckerPathSimplifier.cpp
src/BSplines/tests/: CMakeLists.txt
src/BaseLib/: CMakeLists.txt  main.cpp
src/BaseLib/include/: AbstractCollection.h  AbstractVector.h  AmolqcImporter.h  AsciiArt.h  Atom.h  AtomCollection.h  AtomCollections.h  AtomsVector.h  AtomsVectorCollection.h  AtomsVectorLinkedElectronsVector.h  BinaryFileReader.h  BuildInfo.h  CameraSettings.h  ChemicalSystem.h  CollectionParser.h  Combinatorics.h  CoulombPotential.h  DataVector.h  EigenYamlConversion.h  Electron.h  ElectronCollection.h  ElectronCollections.h  ElectronSelection.h  ElectronsVector.h  ElectronsVectorCollection.h  ElementColor.h  ElementInfo.h  ElementType.h  ElementTypeCollection.h  ElementTypes.h  ElementTypesVector.h  Entity.h  Enumerate.h  EnumeratedType.h  ErrorHandling.h  Formatting.h  GeneralSettings.h  GraphAnalysis.h  ICollection.h  IInsertable.h  (+54 more)
src/BaseLib/resources/: TestMolecules.h
src/BaseLib/source/: AbstractCollection.cpp  AbstractVector.cpp  AmolqcImporter.cpp  Atom.cpp  AtomCollection.cpp  AtomCollections.cpp  AtomsVector.cpp  AtomsVectorCollection.cpp  AtomsVectorLinkedElectronsVector.cpp  BinaryFileReader.cpp  BuildInfo.cpp  CameraSettings.cpp  CollectionParser.cpp  Combinatorics.cpp  EigenYamlConversion.cpp  Electron.cpp  ElectronCollection.cpp  ElectronCollections.cpp  ElectronSelection.cpp  ElectronsVector.cpp  ElectronsVectorCollection.cpp  ElementInfo.cpp  ElementType.cpp  ElementTypeCollection.cpp  ElementTypesVector.cpp  ErrorHandling.cpp  GraphAnalysis.cpp  ICollection.cpp  IPosition.cpp  ISettings.cpp  Importer.cpp  Logger.cpp  MaxRefParser.cpp  Metrics.cpp  MolecularGeometry.cpp  MolecularSelection.cpp  NearestElectrons.cpp  OptimizationPathFileImporter.cpp  Particle.cpp  ParticleCollection.cpp  (+25 more)
src/BaseLib/tests/: AAtomCollectionsTest.cpp  AAtomTest.cpp  AAtomsVectorCollectionTest.cpp  AAtomsVectorLinkedElectronsVectorTest.cpp  ABoostSphericalHarmonicsTest.cpp  ACombinatoricsTest.cpp  ACoulombPotentialTest.cpp  AEigenYamlConversionTest.cpp  AElectronCollectionTest.cpp  AElectronCollectionsTest.cpp  AElectronSelectionTest.cpp  AElectronTest.cpp  AElectronsVectorCollectionTest.cpp  AElementTypeCollectionTest.cpp  AEnumerateTest.cpp  AGeneralSettingsTest.cpp  AGraphAnalysisTest.cpp  AISettingsTest.cpp  AMapUtilsTest.cpp  AModifiedSphericalBessel1stKindTest.cpp  AMolecularGeometryTest.cpp  ANearestElectronsTest.cpp  AParticleCollectionTest.cpp  AParticleSelectionTest.cpp  AParticleTest.cpp  AParticlesVectorCollectionTest.cpp  AParticlesVectorTest.cpp  APermutationHandlingTest.cpp  APositionCollectionTest.cpp  APositionsVectorTest.cpp  APositionsVectorTransformerTest.cpp  APropertyTest.cpp  ASpinTypeCollectionTest.cpp  ASpinTypeTest.cpp  ASpinTypesVectorTest.cpp  AStatisticsTest.cpp  AToStringTest.cpp  ATypesVectorTest.cpp  AYamlTest.cpp  CMakeLists.txt  (+1 more)
src/Executables/: BaseLib.cpp  CMakeLists.txt  CalculateSpinStatisticsOverMultipleMolecules.cpp  CompareMolecules.cpp  CustomMesh.cpp  EnergyPartitioning.cpp  GraphAnalyzer.cpp  H6TSsearch.cpp  LocalPotentialEnergy.cpp  MaximaProcessing.cpp  OpenmpSandbox.cpp  PathOptimization.cpp  ProcessMaxima.cpp  ShowMaxima.cpp  ShowMaximum.cpp  ShowPath.cpp  StringMethodGUI.cpp  StructuralSimilarity.cpp  StructuralSimilarityExec.cpp  WavefunctionTransitionStates.cpp  fetchOverlaps.cpp  inPsights.cpp  mainH2TsBruteForce.cpp
src/GUI/: CMakeLists.txt  example.cpp  main.cpp  mainH2TsBruteForce.cpp  mainHessianTesting.cpp  mainLocalPotentialEnergy.cpp  mainPathOptimization.cpp  mainStringMethodGUI.cpp  mainStringMethodGUI.cpp-base  myresources.qrc
src/GUI/include/: Arrow.h  Atom.h  (+52 more)
src/LibAmolqc/: CMakeLists.txt  main.cpp  t.wf
src/Methods/: CMakeLists.txt  main.cpp
src/cmake/: MyCmakeFunctions.cmake
src/tests/: AFileXyzInputTest.cpp  AFindElement.cpp  AFindElementTest.cpp  AHungarianTest.cpp  ATestElectronAssigner.cpp  ATestElectronAssignerTest.cpp  CMakeLists.txt  testmain.cpp
(+1084 files in other folders)
