add_subdirectory(AmolqcInterface)
add_subdirectory(BaseLib)
add_subdirectory(Externals)
add_subdirectory(Methods)

if (DEFINED BUILD_GUI AND (${BUILD_GUI}))
    message("BUILD_GUI=${BUILD_GUI} -> Trying to build the GUI. Make sure, Qt and Qt3D is available.")
    add_subdirectory(GUI)
elseif (DEFINED BUILD_GUI AND NOT (${BUILD_GUI}))
    message("BUILD_GUI=${BUILD_GUI} -> Don't build the GUI and dependent executables.")
else()
    message("BUILD_GUI is undefined -> Don't build the GUI and dependent executables.")
endif()

add_subdirectory(Executables)
